# asmjit

./: .gitignore  CHANGELOG.md  Cargo.toml  TODO.md
src/: lib.rs
src/core/: arch.rs  assembler.rs  builder.rs  callconv.rs  codeholder.rs  emitter.rs  func.rs  globals.rs  jitallocator.rs  jitruntime.rs  mod.rs  operand.rs  target.rs  type.rs  virtmem.rs  virtmem_unix.rs  virtmem_win.rs  zonetree.rs
src/core/virtmem/: mod.rs  unix.rs  win.rs
src/x86/: assembler.rs  callconv.rs  emitter.rs  features.rs  globals.rs  mod.rs  operand.rs
