[package]
name = "asmjit"
version = "0.1.0"
authors = ["Dmitry <mamhigtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bitflags = "1.2.1"
libc = "0.2.66"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winnt", "handleapi", "minwindef", "errhandlingapi", "winbase", "sysinfoapi"]}
scopeguard = "1.0.0"